charts/fifa-bot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fifa-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fifa-bot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fifa-bot
    spec:
      containers:
        - env:
            - name: ENABLE_PROFILING
              value: "true"
            - name: REDIS_ADDRESS
              value: redis-master.redis:6379
            - name: REDIS_DB
              value: "0"
            - name: COMPETITION_ID
              value: "17"
            - name: SLACK_WEBHOOK_URL
              valueFrom:
                secretKeyRef:
                  key: SLACK_WEBHOOK_URL
                  name: fifa-bot-creds
            - name: LOG_LEVEL
              value: DEBUG
          image: ghcr.io/imdevinc/fifa-bot:2.1.3
          imagePullPolicy: IfNotPresent
          name: fifa-bot
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      restartPolicy: Always
