charts/fifa-bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fifa-bot
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: fifa-bot
  type: ClusterIP
