charts/fifa-bot/pprof.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fifa-bot
  namespace: fifa-bot
spec:
  hostnames:
  - fifa-bot.int.imdevinc.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: fifa-bot
      namespace: fifa-bot
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
